--- a/ComputerGraphics/OpenGL/OpenGL/OpenGL.vcxproj.filters
+++ b/ComputerGraphics/OpenGL/OpenGL/OpenGL.vcxproj.filters
@@ -22,4 +22,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\Middleware\soil\src\SOIL.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
