--- a/ComputerGraphics/OpenGL/OpenGL/OpenGL.vcxproj
+++ b/ComputerGraphics/OpenGL/OpenGL/OpenGL.vcxproj
@@ -76,11 +76,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\Middleware\glad\include;$(SolutionDir)..\Middleware\SDL2-2.0.8\include;$(SolutionDir)..\Middleware\glm;$(SolutionDir)..\Middleware\soil\src;$(SolutionDir)\Source;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\Middleware\glad\include;$(SolutionDir)..\Middleware\SDL2-2.0.8\include;$(SolutionDir)..\Middleware\glm;$(SolutionDir)\Source;$(SolutionDir)..\Middleware;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\Middleware\SDL2-2.0.8\lib\$(PlatformTarget);$(SolutionDir)..\Middleware\soil\lib\$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>sdl2.lib;sdl2main.lib;SOIL.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)..\Middleware\SDL2-2.0.8\lib\$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>sdl2.lib;sdl2main.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
@@ -90,11 +90,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\Middleware\glad\include;$(SolutionDir)..\Middleware\SDL2-2.0.8\include;$(SolutionDir)..\Middleware\glm;$(SolutionDir)..\Middleware\soil\src;$(SolutionDir)\Source;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\Middleware\glad\include;$(SolutionDir)..\Middleware\SDL2-2.0.8\include;$(SolutionDir)..\Middleware\glm;$(SolutionDir)\Source;$(SolutionDir)..\Middleware;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\Middleware\SDL2-2.0.8\lib\$(PlatformTarget);$(SolutionDir)..\Middleware\soil\lib\$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>sdl2.lib;sdl2main.lib;SOIL.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)..\Middleware\SDL2-2.0.8\lib\$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>sdl2.lib;sdl2main.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
@@ -106,13 +106,13 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\Middleware\glad\include;$(SolutionDir)..\Middleware\SDL2-2.0.8\include;$(SolutionDir)..\Middleware\glm;$(SolutionDir)..\Middleware\soil\src;$(SolutionDir)\Source;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\Middleware\glad\include;$(SolutionDir)..\Middleware\SDL2-2.0.8\include;$(SolutionDir)..\Middleware\glm;$(SolutionDir)\Source;$(SolutionDir)..\Middleware;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\Middleware\SDL2-2.0.8\lib\$(PlatformTarget);$(SolutionDir)..\Middleware\soil\lib\$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>sdl2.lib;sdl2main.lib;SOIL.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)..\Middleware\SDL2-2.0.8\lib\$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>sdl2.lib;sdl2main.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
@@ -124,13 +124,13 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\Middleware\glad\include;$(SolutionDir)..\Middleware\SDL2-2.0.8\include;$(SolutionDir)..\Middleware\glm;$(SolutionDir)..\Middleware\soil\src;$(SolutionDir)\Source;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\Middleware\glad\include;$(SolutionDir)..\Middleware\SDL2-2.0.8\include;$(SolutionDir)..\Middleware\glm;$(SolutionDir)\Source;$(SolutionDir)..\Middleware;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\Middleware\SDL2-2.0.8\lib\$(PlatformTarget);$(SolutionDir)..\Middleware\soil\lib\$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>sdl2.lib;sdl2main.lib;SOIL.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)..\Middleware\SDL2-2.0.8\lib\$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>sdl2.lib;sdl2main.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
@@ -140,9 +140,23 @@
     <ClCompile Include="..\Source\Core\file_system.cpp" />
     <ClCompile Include="..\Source\Core\input.cpp" />
     <ClCompile Include="..\Source\Core\timer.cpp" />
+    <ClCompile Include="..\Source\Objects\camera.cpp" />
+    <ClCompile Include="..\Source\Objects\cube.cpp" />
+    <ClCompile Include="..\Source\Objects\directional_light.cpp" />
+    <ClCompile Include="..\Source\Objects\light.cpp" />
+    <ClCompile Include="..\Source\Objects\model.cpp" />
+    <ClCompile Include="..\Source\Objects\plane.cpp" />
+    <ClCompile Include="..\Source\Objects\point_light.cpp" />
+    <ClCompile Include="..\Source\Objects\sphere.cpp" />
+    <ClCompile Include="..\Source\Objects\torus.cpp" />
+    <ClCompile Include="..\Source\Renderer\material.cpp" />
     <ClCompile Include="..\Source\Renderer\renderer.cpp" />
     <ClCompile Include="..\Source\Renderer\shader.cpp" />
     <ClCompile Include="..\Source\Renderer\vertex_array.cpp" />
+    <ClCompile Include="..\Source\Renderer\vertex_arrays.cpp" />
+    <ClCompile Include="..\Source\Scenes\scene02.cpp" />
+    <ClCompile Include="..\Source\Scenes\scene03.cpp" />
+    <ClCompile Include="..\Source\Scenes\scene04.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="scene01.cpp" />
   </ItemGroup>
@@ -151,18 +165,46 @@
     <ClInclude Include="..\Source\Core\engine.h" />
     <ClInclude Include="..\Source\Core\file_system.h" />
     <ClInclude Include="..\Source\Core\input.h" />
+    <ClInclude Include="..\Source\Core\object.h" />
     <ClInclude Include="..\Source\Core\scene.h" />
     <ClInclude Include="..\Source\Core\system.h" />
     <ClInclude Include="..\Source\Core\timer.h" />
     <ClInclude Include="..\Source\Math\transform.h" />
+    <ClInclude Include="..\Source\Objects\camera.h" />
+    <ClInclude Include="..\Source\Objects\cube.h" />
+    <ClInclude Include="..\Source\Objects\directional_light.h" />
+    <ClInclude Include="..\Source\Objects\light.h" />
+    <ClInclude Include="..\Source\Objects\model.h" />
+    <ClInclude Include="..\Source\Objects\plane.h" />
+    <ClInclude Include="..\Source\Objects\point_light.h" />
+    <ClInclude Include="..\Source\Objects\sphere.h" />
+    <ClInclude Include="..\Source\Objects\torus.h" />
+    <ClInclude Include="..\Source\Renderer\material.h" />
     <ClInclude Include="..\Source\Renderer\renderer.h" />
     <ClInclude Include="..\Source\Renderer\shader.h" />
     <ClInclude Include="..\Source\Renderer\vertex_array.h" />
+    <ClInclude Include="..\Source\Renderer\vertex_arrays.h" />
     <ClInclude Include="..\Source\Scenes\scene01.h" />
+    <ClInclude Include="..\Source\Scenes\scene02.h" />
+    <ClInclude Include="..\Source\Scenes\scene03.h" />
+    <ClInclude Include="..\Source\Scenes\scene04.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Resources\Shaders\basic.fs" />
     <None Include="..\Resources\Shaders\basic.vs" />
+    <None Include="..\Resources\Shaders\basic_uv.fs" />
+    <None Include="..\Resources\Shaders\basic_uv.vs" />
+    <None Include="..\Resources\Shaders\gouraud_ads.vs" />
+    <None Include="..\Resources\Shaders\grourad.fs" />
+    <None Include="..\Resources\Shaders\grourad.vs" />
+    <None Include="..\Resources\Shaders\phong.fs" />
+    <None Include="..\Resources\Shaders\phong.vs" />
+    <None Include="..\Resources\Shaders\phong_multi.fs" />
+    <None Include="..\Resources\Shaders\phong_multi.vs" />
+    <None Include="..\Resources\Shaders\phong_specular_map.fs" />
+    <None Include="..\Resources\Shaders\phong_specular_map.vs" />
+    <None Include="..\Resources\Shaders\phong_uv.fs" />
+    <None Include="..\Resources\Shaders\phong_uv.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
