--- a/ComputerGraphics/OpenGL/OpenGL/OpenGL.vcxproj.filters
+++ b/ComputerGraphics/OpenGL/OpenGL/OpenGL.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="..\Source\Objects\plane.cpp">
       <Filter>Objects</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\Scenes\scene05.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Middleware\soil\src\SOIL.h">
@@ -188,6 +191,12 @@
     <ClInclude Include="..\Source\Objects\plane.h">
       <Filter>Objects</Filter>
     </ClInclude>
+    <ClInclude Include="..\Source\Scenes\scene05.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\Objects\renderable.h">
+      <Filter>Objects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Resources\Shaders\basic.fs">
@@ -233,6 +242,18 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="..\Resources\Shaders\phong_uv.vs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\Resources\Shaders\phong_fog.fs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\Resources\Shaders\phong_fog.vs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\Resources\Shaders\basic_color.fs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\Resources\Shaders\basic_color.vs">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
