--- a/ComputerGraphics/OpenGL/OpenGL/OpenGL.vcxproj
+++ b/ComputerGraphics/OpenGL/OpenGL/OpenGL.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="..\Source\Scenes\scene03.cpp" />
     <ClCompile Include="..\Source\Scenes\scene04.cpp" />
     <ClCompile Include="..\Source\Scenes\scene05.cpp" />
+    <ClCompile Include="..\Source\Scenes\scene06.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="scene01.cpp" />
   </ItemGroup>
@@ -204,6 +205,7 @@
     <ClInclude Include="..\Source\Scenes\scene03.h" />
     <ClInclude Include="..\Source\Scenes\scene04.h" />
     <ClInclude Include="..\Source\Scenes\scene05.h" />
+    <ClInclude Include="..\Source\Scenes\scene06.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Resources\Shaders\basic.fs" />
