--- a/ComputerGraphics/OpenGL/OpenGL/OpenGL.vcxproj
+++ b/ComputerGraphics/OpenGL/OpenGL/OpenGL.vcxproj
@@ -188,6 +188,7 @@
     <ClCompile Include="..\Source\Scenes\scene09.cpp" />
     <ClCompile Include="..\Source\Scenes\scene10.cpp" />
     <ClCompile Include="..\Source\Scenes\scene11.cpp" />
+    <ClCompile Include="..\Source\Scenes\scene12.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="scene01.cpp" />
   </ItemGroup>
@@ -229,6 +230,7 @@
     <ClInclude Include="..\Source\Scenes\scene09.h" />
     <ClInclude Include="..\Source\Scenes\scene10.h" />
     <ClInclude Include="..\Source\Scenes\scene11.h" />
+    <ClInclude Include="..\Source\Scenes\scene12.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Resources\Shaders\basic.fs" />
@@ -249,6 +251,9 @@
     <None Include="..\Resources\Shaders\phong_multi.fs" />
     <None Include="..\Resources\Shaders\phong_multi.vs" />
     <None Include="..\Resources\Shaders\phong_nm.fs" />
+    <None Include="..\Resources\Shaders\phong_nm.vs" />
+    <None Include="..\Resources\Shaders\phong_shadow.fs" />
+    <None Include="..\Resources\Shaders\phong_shadow.vs" />
     <None Include="..\Resources\Shaders\phong_specular_map.fs" />
     <None Include="..\Resources\Shaders\phong_specular_map.vs" />
     <None Include="..\Resources\Shaders\phong_spotlight.fs" />
